# AgriTriage

./: .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: agent.py  main.py
frontend/: app.js  index.html  style.css
k8s/: deployment.yaml  secret.yaml  service.yaml
